--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   
 
 a {
-    background-color: #f44336;
+    background-color: #2a2929;
     color: white;
     padding: 15px 25px;
     text-align: center;
