--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: "Quattrocento", serif;
-    outline: 2px solid red;
+    
     box-sizing: border-box;
 }
 
@@ -28,12 +28,12 @@
     margin-bottom: 0px;
 }
 
-.home-title {
+.section-title {
     font-size: 48px;
     margin: 0px;
 }
 
-.demo-reel {
+.main-section {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,4 +54,15 @@ a {
     text-align: center;
     text-decoration: none;
     display: inline-block;
+}
+
+.game-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style: none;
+}
+
+.track-title {
+    text-align: center;
 }
