--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: "Quattrocento", serif;
-    
+    /* outline: 2px dashed tomato; */
     box-sizing: border-box;
 }
 
@@ -14,6 +14,7 @@
     align-items: end;
     justify-content: space-between;
     padding: 0px;
+    border-bottom: 3px solid #2a2929;
 }
 
 .logo {
@@ -30,6 +31,13 @@
 
 .navigation-link {
     margin: 1px;
+    margin-bottom: 0px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+}
+
+.game-link {
+    border-radius: 15px;
 }
 
 .navigation-link:hover,
@@ -47,6 +55,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 25px;
 }
 
 h1,
