--- a/style.css
+++ b/style.css
@@ -5,16 +5,30 @@
     color: whitesmoke;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    min-height: 100vh;
+    margin: 0;
+}
+
 :root {
-    background-color: #1d1c1c;
+    background-image: url(../media/earthpictureai3.jpg);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: cover;
+    background-color: #1d1c1c;    
 }
 
 .site-header {
     align-items: end;
+    background-color: #1d1c1c;
     border-bottom: 3px solid #2a2929;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin: 0px;
     padding: 0px;
 }
 
@@ -52,14 +66,19 @@
     font-size: 48px;
     letter-spacing: 5px;
     margin: 0px;
+    margin-top: 25px;
 }
 
 .main-section {
     align-items: center;
+    background-color: #171616;
     display: flex;
+    flex: 1;
     flex-direction: column;
-    justify-content: center;
-    margin-top: 25px;
+    justify-content: start;
+    margin-top: 0px;
+    margin-left: 250px;
+    margin-right: 250px;
 }
 
 a {
