--- a/style.css
+++ b/style.css
@@ -63,6 +63,11 @@ body {
     margin: 0;
 }
 
+.contact-text {
+    font-size: 24px;
+    margin: 50px;
+}
+
 :root {
     background-image: url(../media/earthpictureai3.jpg);
     background-repeat: no-repeat;
@@ -125,17 +130,21 @@ body {
     border-left: 3px solid #2a2929;
     border-right: 3px solid #2a2929;
     display: flex;
-    flex: 1;
+    flex: 1 0 auto;
     flex-direction: column;
     justify-content: start;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 0px;
-    margin-left: 250px;
-    margin-right: 250px;
+    max-width: 1440px;
+    width: 100%;
+    
 }
 
 .music-container {
     align-items: center;
     display: flex;
+    flex: 1 0 auto;
     gap: 50px;
     justify-content: space-between;
 }
@@ -152,6 +161,7 @@ a {
 .game-list {
     display: flex;
     flex-direction: row;
+    flex: 1 0 auto;
     gap: 50px;
     justify-content: space-around;
     list-style: none;
@@ -162,4 +172,9 @@ a {
     font-weight: 700;
     margin-top: 10px;
     text-align: center;
+}
+
+.resume {
+    font-size: 36px;
+    margin: 150px;
 }
