removed a div class, changed font px value to rem

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ body {
 }
 
 .section-title {
-    font-size: 48px;
+    font-size: 3rem;
     margin: 0px;
     margin-top: 25px;
     margin-bottom: 25px;
