--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ input::placeholder {
     align-items: center;
     display: flex;
     flex: 1 0 auto;
-    gap: 50px;
+    gap: 3.125rem;
     justify-content: space-between;
 }
 
@@ -203,21 +203,21 @@ a {
     display: flex;
     flex-direction: row;
     flex: 1 0 auto;
-    gap: 50px;
+    gap: 3.125rem;
     justify-content: space-around;
     list-style: none;
 }
 
 .media-title {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 700;
-    margin-top: 10px;
+    margin-top: 1.125rem;
     text-align: center;
 }
 
 .resume {
-    font-size: 36px;
-    margin: 150px;
+    font-size: 2.5rem;
+    margin: 8rem;
 }
 
 .record {
